<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.renesis.smartly.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mimo_background"
        tools:context=".ui.login.LoginGuestFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".1"
            android:contentDescription="@string/contentdescription"
            android:scaleType="centerCrop"
            android:src="@drawable/abstract_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/teal_700" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:background="@drawable/grad_rc_bg"
            android:gravity="center"
            android:text="Almost there!"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:id="@+id/root_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/avatarLayout"
                    android:layout_width="@dimen/avatar_width"
                    android:layout_height="@dimen/avatar_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="@dimen/avatar_width"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin_8dp"
                        android:background="@drawable/circle"
                        android:backgroundTint="@color/teal_700"
                        android:contentDescription="@string/contentdescription" />

                    <ImageView
                        android:id="@+id/changepc"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle"
                        android:backgroundTint="@color/black_overlay"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_cam"
                        app:tint="@color/white" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:hint="@string/your_name"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/avatarLayout"
                    app:passwordToggleTint="@color/colorPrimaryDark"
                    app:startIconDrawable="@drawable/ic_profile"
                    app:startIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font0"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:text="@={viewmodel.name}"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/text_size_normal" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:background="@drawable/button_1_background"
                    android:drawableStart="@drawable/ic_tick"
                    android:drawableTint="@color/white"
                    android:paddingStart="@dimen/card_margin"
                    android:paddingEnd="@dimen/_30dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_text_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>